--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
 <body>
 
-<h1>You cannot play tennis</h1>
+<h1>Hello Danny</h1>
+ 
+  <p>
+    My cause would be, simply put, to be remembered in some way and feel satisfied for said rememberence. If this means I am remembered for being wealthy and satisfied then I am content with this. 
+    I want to feel like the way I lived my life was satisfactory and I can feel that through my actions and choices, I lived the way I wanted to and I will be remembered for this way that I lived. 
+    I genuinely don't know what my path will be to succeed with this cause, but I still go through each day attempting to find the correct way to find this cause. 
+  </p>
 </body>
 <html>
